--- a/estilos.css
+++ b/estilos.css
@@ -6,11 +6,12 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	scroll-behavior: smooth;
 }
 
 body{
 	text-align: center;
-	font-family: arial;
+	font-family: 'Catamaran', sans-serif;
 }
 
 .wrapper{
@@ -138,6 +139,24 @@ body > div > div > section > div > div > div.im > div > img:hover{
 	text-align: justify;
 }
 
+
+.cuerpo article img{
+    margin: 10px; 
+    border-radius: 20px;
+}
+
+div.parraf:nth-child(2) > p:nth-child(4){
+    clear: both;
+}
+
+div.parraf:nth-child(2) > img:nth-child(2){
+    float: left;
+}
+
+div.parraf:nth-child(2) > img:nth-child(5){
+    float: right;
+}
+
 .cuerpo article .img img{
 	margin: 20px;
 	border-radius: 10px;
@@ -197,33 +216,184 @@ table tr td{
 */
 
 .loader{
-	background: #fff;
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	display: flex;
-	justify-content: center;
-    align-items: center;
+    position: fixed;
+    background: #fff;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    display: flex;
 }
 
-.circ{
-	width: 100px;
-	height: 100px;
-	background: none;
-	border-radius: 100%;
-	border: 10px solid #c6c6c6;
-	border-top-color: #fff;
-	animation: loader infinite 1s;
+#circularG{
+	position:relative;
+	width:150px;
+	height:150px;
+	margin: auto;
 }
 
-@keyframes loader{
-	0%{transform: rotate(0deg);}
-	50%{transform: rotate(180deg);}
-	100%{transform: rotate(360deg);}
+.circularG{
+	position:absolute;
+	background-color:rgb(0,0,0);
+	width:35px;
+	height:35px;
+	border-radius:23px;
+		-o-border-radius:23px;
+		-ms-border-radius:23px;
+		-webkit-border-radius:23px;
+		-moz-border-radius:23px;
+	animation-name:bounce_circularG;
+		-o-animation-name:bounce_circularG;
+		-ms-animation-name:bounce_circularG;
+		-webkit-animation-name:bounce_circularG;
+		-moz-animation-name:bounce_circularG;
+	animation-duration:1.1s;
+		-o-animation-duration:1.1s;
+		-ms-animation-duration:1.1s;
+		-webkit-animation-duration:1.1s;
+		-moz-animation-duration:1.1s;
+	animation-iteration-count:infinite;
+		-o-animation-iteration-count:infinite;
+		-ms-animation-iteration-count:infinite;
+		-webkit-animation-iteration-count:infinite;
+		-moz-animation-iteration-count:infinite;
+	animation-direction:normal;
+		-o-animation-direction:normal;
+		-ms-animation-direction:normal;
+		-webkit-animation-direction:normal;
+		-moz-animation-direction:normal;
+}
+
+#circularG_1{
+	left:0;
+	top:60px;
+	animation-delay:0.41s;
+		-o-animation-delay:0.41s;
+		-ms-animation-delay:0.41s;
+		-webkit-animation-delay:0.41s;
+		-moz-animation-delay:0.41s;
+}
+
+#circularG_2{
+	left:15px;
+	top:15px;
+	animation-delay:0.55s;
+		-o-animation-delay:0.55s;
+		-ms-animation-delay:0.55s;
+		-webkit-animation-delay:0.55s;
+		-moz-animation-delay:0.55s;
+}
+
+#circularG_3{
+	top:0;
+	left:60px;
+	animation-delay:0.69s;
+		-o-animation-delay:0.69s;
+		-ms-animation-delay:0.69s;
+		-webkit-animation-delay:0.69s;
+		-moz-animation-delay:0.69s;
+}
+
+#circularG_4{
+	right:15px;
+	top:15px;
+	animation-delay:0.83s;
+		-o-animation-delay:0.83s;
+		-ms-animation-delay:0.83s;
+		-webkit-animation-delay:0.83s;
+		-moz-animation-delay:0.83s;
+}
+
+#circularG_5{
+	right:0;
+	top:60px;
+	animation-delay:0.97s;
+		-o-animation-delay:0.97s;
+		-ms-animation-delay:0.97s;
+		-webkit-animation-delay:0.97s;
+		-moz-animation-delay:0.97s;
+}
+
+#circularG_6{
+	right:15px;
+	bottom:15px;
+	animation-delay:1.1s;
+		-o-animation-delay:1.1s;
+		-ms-animation-delay:1.1s;
+		-webkit-animation-delay:1.1s;
+		-moz-animation-delay:1.1s;
+}
+
+#circularG_7{
+	left:60px;
+	bottom:0;
+	animation-delay:1.24s;
+		-o-animation-delay:1.24s;
+		-ms-animation-delay:1.24s;
+		-webkit-animation-delay:1.24s;
+		-moz-animation-delay:1.24s;
+}
+
+#circularG_8{
+	left:15px;
+	bottom:15px;
+	animation-delay:1.38s;
+		-o-animation-delay:1.38s;
+		-ms-animation-delay:1.38s;
+		-webkit-animation-delay:1.38s;
+		-moz-animation-delay:1.38s;
+}
+
+
+
+@keyframes bounce_circularG{
+	0%{
+		transform:scale(1);
+	}
+
+	100%{
+		transform:scale(.3);
+	}
+}
+
+@-o-keyframes bounce_circularG{
+	0%{
+		-o-transform:scale(1);
+	}
+
+	100%{
+		-o-transform:scale(.3);
+	}
+}
+
+@-ms-keyframes bounce_circularG{
+	0%{
+		-ms-transform:scale(1);
+	}
+
+	100%{
+		-ms-transform:scale(.3);
+	}
+}
+
+@-webkit-keyframes bounce_circularG{
+	0%{
+		-webkit-transform:scale(1);
+	}
+
+	100%{
+		-webkit-transform:scale(.3);
+	}
+}
+
+@-moz-keyframes bounce_circularG{
+	0%{
+		-moz-transform:scale(1);
+	}
+
+	100%{
+		-moz-transform:scale(.3);
+	}
 }
 
 /*
@@ -269,6 +439,12 @@ table tr td{
     .cuerpo article .img img{
         width: 80%;
         float: none;
+    }
+    
+    .cuerpo article img{
+        width: 90%;
+        float: none;
+        height: auto;
     }
     
     #tabla{
